Osnova za matrike je končana.

--- a/03_string/02.kriptologija.md
+++ b/03_string/02.kriptologija.md
@@ -13,3 +13,6 @@ Iz besede z uporabo šifre v slovarju poišči originalni stavek.
 
 # Transpozicijska šifra
 Z uporabo treh enako dolgih besed poišči originalni stavek.
+
+# Brute force hacking
+Geslo je dolgo 4 mesta. Z uporabo brute force preveri vse možne kombinacije dokler ne najdeš prave.
